{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 18,
  "lineage": "6aadef53-aa05-c8cb-fc66-fbcb00f293a9",
  "resources": [
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091ca8d4b024e75a8",
            "domain": "vpc",
            "id": "eipalloc-091ca8d4b024e75a8",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-205-8-114.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.8.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f939663814bdf85",
            "domain": "vpc",
            "id": "eipalloc-09f939663814bdf85",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-223-188.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.223.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00080f07ee0651e5c",
            "domain": "vpc",
            "id": "eipalloc-00080f07ee0651e5c",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-206-141-157.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.141.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-us-east-1c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:898149643183:internet-gateway/igw-0000d9dff24f37ad1",
            "id": "igw-0000d9dff24f37ad1",
            "owner_id": "898149643183",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0c59387bdd1d4db5e"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this",
            "module.VPC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0000d9dff24f37ad1",
            "id": "r-rtb-09db32e656a8311241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09db32e656a831124",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.this",
            "module.VPC.aws_route_table.public",
            "module.VPC.aws_vpc.this",
            "module.VPC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:898149643183:route-table/rtb-07c8e46dec8aa10e0",
            "id": "rtb-07c8e46dec8aa10e0",
            "owner_id": "898149643183",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c59387bdd1d4db5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this",
            "module.VPC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:898149643183:route-table/rtb-021b56579dd944f8c",
            "id": "rtb-021b56579dd944f8c",
            "owner_id": "898149643183",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c59387bdd1d4db5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this",
            "module.VPC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:898149643183:route-table/rtb-0ed3d3add51ff6074",
            "id": "rtb-0ed3d3add51ff6074",
            "owner_id": "898149643183",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c59387bdd1d4db5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this",
            "module.VPC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:898149643183:route-table/rtb-09db32e656a831124",
            "id": "rtb-09db32e656a831124",
            "owner_id": "898149643183",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c59387bdd1d4db5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this",
            "module.VPC.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:898149643183:vpc/vpc-0c59387bdd1d4db5e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0724bab8efcb7beea",
            "default_route_table_id": "rtb-0394f79991384469e",
            "default_security_group_id": "sg-02e8eb24fe3db7429",
            "dhcp_options_id": "dopt-faad7691",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c59387bdd1d4db5e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0394f79991384469e",
            "owner_id": "898149643183",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}